2014-06-12  Ben Chaco  <bchaco@x3-c.com>

	* src/e-hal/src/epiphany-hal.c (int e_init):
	(int e_open):
	(int e_alloc):
	(int ee_read_esys):
	(ssize_t ee_write_esys):
	(int e_reset_system):
	Removed test for root privs, use /dev/epiphany for memory mapping,
	Fixed return value checks from open() syscall.
	* src/e-utils/e-hw-rev/e-hw-rev.c (int main):
	(int e_close):
	(int e_read_esys):
	Use /dev/epiphany for memory mapping. Untabified.

2014-06-10  Ola Jeppsson <ola.jeppsson@gmail.com>

	* src/e-xml/Makefile:
	e-xml: Only export public API functions in shared library

	Don't clutter namespace.

	objdump --dynamic-syms Release/libe-xml.so | grep " g    " | wc -l
	Before: 262
	After: 27

	* src/e-xml/src/parse_c.c:
	e-xml: Add example program that uses C bindings

	* src/e-xml/Makefile:
	* src/e-xml/src/epiphany_xml.cpp:
	* src/e-xml/src/epiphany_xml_c.h:
	e-xml: Add C api

	* src/e-xml/src/epiphany_platform.h:
	* src/e-xml/src/epiphany_xml.h:
	e-xml: Add include guards to header files

	* src/e-xml/src/epiphany_xml.cpp:
	e-xml: Fix mismatched delete / new[]

2014-05-28  Ben Chaco  <bchaco@x3-c.com>

	* build-libs.sh:
	Updates to fix CROSS_COMPILE and CROSS_PREFIX - allow CROSS_PREFIX from env var
	
2014-05-27  Ben Chaco  <bchaco@x3-c.com>

	* build_tools/make_exe.rules:
	* src/e-server/Makefile:
	* src/e-utils/e-hw-rev/Makefile:
	* src/e-utils/e-loader/Makefile:
	* src/e-utils/e-read/Makefile:
	* src/e-utils/e-reset/Makefile:
	* src/e-utils/e-write/Makefile:
	Added DBG_LIB_PATHS for linking debug versions of static libraries within exe Makefiles.
	
2014-05-26  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* build-libs.sh: Set CROSS_PREFIX as CROSS_COMPILE value for make.

2014-05-23  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* .gitignore: Created.

2014-05-14  Ben Chaco  <bchaco@x3-c.com>

	* build-libs.sh (function build-loader): Implement make-based build.
	(function build-hal):  Implement make-based build.